--- a/tvphp.css
+++ b/tvphp.css
@@ -1,3 +1,39 @@
+ul {
+    padding:0;
+    margin:0;
+    text-align: center;
+    list-style: none inside;
+}
+
+a{        text-decoration: none; }
+a:hover { text-decoration: underline; }
+
+/* Info Bar*/
+#infobar {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 1em;
+    border: 0;
+    padding: .2em 0 .4em 0;
+    width: 100%;
+    background: #888;
+    color: #000;
+}
+
+#infobar ul{
+    float: right;
+    white-space: nowrap;
+}
+
+#infobar ul li{
+    display: inline;
+    padding: .2em 1em;
+}
+
+#infobar ul li a{        color: #000; }
+#infobar ul li a:hover { color: #fff; }
+
 
 /* sidebar */
 #sidebar{
@@ -5,39 +41,22 @@
     left: 0;
     top: 0;
     width: 10em;
+    z-index: 2;
     height: 100%;
     background: #000;
 }
 
 #sidebar p{
     color: #fff;
+    text-align: center;
 }
 
-#sidebar p a{
-    color: #888;
-    text-decoration: none;
-}
+#sidebar p a{              color: #aaa; }
+#sidebar p a:hover {       color: #ddd; }
+#sidebar ul li.inactive a{ color: #666; }
+#sidebar ul li.active a{   color: #ddd; }
 
-#sidebar p a:hover{
-    color: #bbb;
-    text-decoration: underline;
-}
-
-#sidebar ul{
-    list-style: none inside;
-}
-
-#sidebar ul li a{
-    color: #444;
-    text-decoration: none;
-}
-
-#sidebar ul li:active a{
-    color: #bbb;
-    text-decoration: none;
-}
-
-#sidebar ul li a:hover{
-    color: #888;
+#sidebar ul li a:hover {
+    color: #aaa;
     text-decoration: none;
 }
