--- a/tvphp.css
+++ b/tvphp.css
@@ -1,3 +1,5 @@
+html { font-family: sans-serif; }
+
 ul {
     padding:0;
     list-style-type: none;
@@ -28,9 +30,13 @@ a:hover { text-decoration: underline; }
 }
 
 #ShowInformation tr.Infoa td, #ShowInformation tr.Infob td{
-    background: #222;
-    color: #ddd;
+    background: #000;
+    color: #ccc;
     border-style: outset;
+    font-size: 1.25em;
+    font-weight: bold;
+    font-family: serif;
+    padding: .25em;
 }
 
 #ShowInformation tr.Infoa td:Hover {
